# EngramR

./: .env.example  .gitignore  .greptile-review  CLAUDE.md  README.md
_code/: .coverage 2  .coverage 3  .env.example  README.md  pyproject.toml
_code/R/: palettes.R  plot_helpers.R  theme_research.R
_code/R/tests/: test-palettes.R  test-plot_builders.R  test-stats_helpers.R  test-theme_research.R
_code/examples/: style_examples.R  style_showcase.py
_code/examples/gallery/: 01_violin_sex_pvalues.txt  04_scatter_correlation_pvalues.txt
_code/ops/: advisor-cache.json
_code/ops/sessions/: 2026-02-27-06414479.md  2026-02-27-0b529436.md  2026-02-27-1e09a2c6.md  2026-02-27-1edbe90e.md  2026-02-27-390eaa9d.md  2026-02-27-5b84cd57.md  2026-02-27-6acd80e2.md  2026-02-27-7fc2943f.md  2026-02-27-87ba52d8.md  2026-02-27-9cc7bade.md  2026-02-27-9de62ba3.md  2026-02-27-a06f9aab.md  (+86 more)
_code/profiles/: README.md
_code/scripts/: backfill_description.py  batch_seed.py  init_vault.py  repair_queue_targets.py  sync_ralph_agents.py  verify_claim.py
_code/styles/: PLOT_DESIGN.md  STYLE_GUIDE.md  palettes.yaml
_code/templates/: claim-note.md  data-inventory.md  experiment-results-readme.md  institution.md  lab.md  project.md  reminders.md  research-goal.md
_code/tests/: test_backfill_provenance.py  test_claim_exchange.py  test_daemon_config.py  test_daemon_scheduler.py  test_decision_engine.py  test_eda.py  test_federation_config.py  test_hypothesis_exchange.py  test_hypothesis_parser.py  test_init_vault.py  test_metabolic_indicators.py  test_note_builder.py  test_pii_filter.py  test_plot_theme.py  test_pubmed.py  test_queue_query.py  test_schedule_runner.py  test_schema_validator.py  test_search_interface.py  test_session_capture.py  test_session_orient.py  test_slack_bot.py  test_slack_formatter.py  test_slack_notify.py  test_validate_write.py  test_vault_advisor.py
(+176 files in other folders)
